--- a/src/api/ChessGame.Infrastructure/ChessGame.Infrastructure.csproj
+++ b/src/api/ChessGame.Infrastructure/ChessGame.Infrastructure.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChessGame.Domain\ChessGame.Domain.csproj" />
+    <ProjectReference Include="..\ChessGame.Domain_old\ChessGame.Domain_old.csproj" />
   </ItemGroup>
 
 </Project>
