--- a/src/api/ChessGame.Domain.Tests_old/ChessGame.Domain.Tests.csproj
+++ b/src/api/ChessGame.Domain.Tests_old/ChessGame.Domain.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChessGame.Domain\ChessGame.Domain.csproj" />
+    <ProjectReference Include="..\ChessGame.Domain_old\ChessGame.Domain_old.csproj" />
   </ItemGroup>
 
 </Project>
