--- a/src/api/ChessGame.Api.Tests/ChessGame.Api.Tests.csproj
+++ b/src/api/ChessGame.Api.Tests/ChessGame.Api.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ChessGame.Api\ChessGame.Api.csproj" />
+    <ProjectReference Include="..\ChessGame.Tests.Shared\ChessGame.Tests.Shared.csproj" />
   </ItemGroup>
 
 </Project>
