--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.sln'
+  solution: '**/ChessGame.Api.csproj'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
