--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  apiProject: '\src\api\ChessGame.ApiChessGame.Api.csproj'
+  apiProject: '\src\api\ChessGame.Api\ChessGame.Api.csproj'
 
 steps:
 - script: dotnet build $(apiProject) --configuration $(buildConfiguration)
