--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,18 +11,10 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  apiProject: '\src\api\ChessGame.Api\ChessGame.Api.csproj'
-
+  
 steps:
-- script: dotnet build $(apiProject) --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
-
-- task: PublishBuildArtifacts@1
+- task: DotNetCoreCLI@2
   inputs:
-    #pathToPublish: '$(Build.ArtifactStagingDirectory)' 
-    artifactName: 'drop' 
-    #publishLocation: 'Container' # Options: container, filePath
-    #targetPath: # Required when publishLocation == FilePath
-    #parallel: false # Optional
-    #parallelCount: # Optional
-    #fileCopyOptions: #Optional
+    command: 'build'
+    projects: '**/ChessGame.Api.csproj'
+    arguments: '--configuration Release'
