Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
     arguments: '--configuration Release'
 - task: CopyFiles@2
   inputs:
-    Contents: '**/ChessGame.Api/bin/Release/netcoreapp3.1/**'
+    Contents: 'src/api/ChessGame.Api/bin/Release/netcoreapp3.1/**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
