--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
 - task: CopyFiles@2
   inputs:
     #Contents: 'src/api/ChessGame.Api/bin/Release/netcoreapp3.1/**'
-    Contents: '**'
+    Contents: 'src/**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
