--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,8 +28,9 @@ steps:
     script: 'cd src/chess-client && npm run-script build'
 - task: CopyFiles@2
   inputs:
-    #Contents: 'src/api/ChessGame.Api/bin/Release/netcoreapp3.1/**'
-    Contents: 'src/**'
+    Contents: |
+      src/api/ChessGame.Api/bin/Release/netcoreapp3.1/**
+      src/chess-client/build/**
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
